need to fix overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -39,7 +39,7 @@
 
 
 .Add-Word {
-  //font-size: 1.5em;
+  font-size: 1.5em;
   padding-top:10px;
   padding-bottom: 10px;
   display: block;
