--- a/src/pyramid.css
+++ b/src/pyramid.css
@@ -31,7 +31,7 @@
 }
 .colText {
   font-size: 2.0vw;
-  position: relative;
+  position: absolute;
   text-overflow: clip;
   overflow: hidden;
 }
